--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@vercel/analytics": "^1.3.2",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
