--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "express": "^4.21.1",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "next-themes": "^0.4.3",
@@ -30,6 +31,7 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-responsive": "^10.0.0",
     "shiki": "^1.22.2",
+    "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
