--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tailwindcss/typography": "^0.5.15",
     "@vercel/analytics": "^1.3.2",
+    "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
